# cosmosim

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-26-quasar-simulation.md  2026-04-08-unreal-engine-renderer.md
docs/superpowers/specs/: 2026-03-26-quasar-simulation-design.md  2026-04-08-unreal-engine-renderer-design.md
glad/include/glad/: gl.h
scripts/: build_ue_lib.sh
src/: body.h  cosmosim_api.c  cosmosim_api.h  initial_conditions.c  initial_conditions.h  integrator.c  integrator.h  main.c  octree.c  octree.h  quadtree.c  quadtree.h  quasar.c  quasar.h  renderer.c  renderer.h  sph.c  sph.h
src/shaders/: bloom_blur.frag  bloom_extract.frag  composite.frag  fullscreen.vert  particle.frag  particle.vert
tests/: test_physics.c
ue/CosmosimPlugin/: CosmosimPlugin.uplugin
ue/CosmosimPlugin/Content/: README_LEVEL_SETUP.md  README_MATERIALS.md  README_NIAGARA_SETUP.md
ue/CosmosimPlugin/Source/CosmosimPlugin/: CosmosimPlugin.Build.cs
ue/CosmosimPlugin/Source/CosmosimPlugin/Private/: CosmosimController.cpp  CosmosimHUD.cpp  CosmosimModule.cpp  CosmosimSubsystem.cpp  NiagaraDI_Cosmosim.cpp
ue/CosmosimPlugin/Source/CosmosimPlugin/Public/: CosmosimController.h  CosmosimHUD.h  CosmosimModule.h  CosmosimSubsystem.h  NiagaraDI_Cosmosim.h
